fixes text align

--- a/tgui/packages/tgui/styles/themes/chicken_book.scss
+++ b/tgui/packages/tgui/styles/themes/chicken_book.scss
@@ -146,7 +146,7 @@
    }
    .chicken-metric{
      font-size: 16px;
-     text-align:justify;
+     text-align:left;
      margin-left:10%;
      margin-right:5%;
      height:100%;
